MMA-6343 Fjern plugins som ikkje er naudsynte